# notes.py
@@ -1,0 +1,56 @@
+from flask import abort, make_response
+
+from config import db
+from models import Note, Person, note_schema
+
+def read_one(note_id):
+    note = Note.query.get(note_id)
+
+    if note is not None:
+        return note_schema.dump(note)
+    else:
+        abort(
+            404, $"Note with ID {note_id} not found"
+        )
+
+def update(note_id, note):
+    existing_note = Note.query.get(note_id)
+
+    if existing_note:
+        update_note = note_schema.load(note, session=db.session)
+        existing_note.content = update_note.content
+        db.session.merge(existing_note)
+        db.session.commit()
+        return note_schema.dump(existing_note), 201
+    else:
+        abort(
+            404, f"Note with ID {note_id} not found"
+        )
+
+def delete(note_id):
+    existing_note = Note.query.get(note_id)
+
+    if existing_note:
+        db.session.delete(existing_note)
+        db.session.commit()
+        return make_response(f"{note_id} successfully deleted", 204)
+    else:
+        abort(
+            404, f"Note with ID {note_id} not found"
+        )
+
+def create(note):
+    person_id = note.get("person_id")
+    person = Person.query.get(person_id)
+
+    if person:
+        new_note = note_schema.load(note, session=db.session)
+        person.notes.append(new_note)
+        db.session.commit()
+        return note_schema.dump(new_note), 201
+    else:
+        abort(
+            404,
+            f"Person not found for ID: {person_id}"
+        )
+
